package PizzeriaConfig;

public class BakerConfig {
    private final int cookingTime;

    public BakerConfig(int cookingTime) {
        this.cookingTime = cookingTime;
    }

    public int getCookingTime() {
        return cookingTime;
    }
}
