package PizzeriaConfig;

public class CourierConfig {
    private final int trunkCapacity;

    public CourierConfig(int trunkCapacity) {
        this.trunkCapacity = trunkCapacity;
    }

    public int getTrunkCapacity() {
        return trunkCapacity;
    }
}
